--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,8 @@
   <head id="header"></head>
   <body>
     <div id="root"></div>
+    <div id="backdrop-root"></div>
+    <div id="overlay-root"></div>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
